// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message should render alert correct 1`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item so-message-item-show-top undefined\\" style={{...}}>
    <ShineoutAlert outAnimation={true} className=\\"so-message-msg\\" dismiss={[undefined]} hideClose={[undefined]} onClose={[Function: bound closeMessageForAnimation]} icon={true} iconSize={14} style={{...}} type=\\"info\\" size=\\"default\\" duration={200}>
      <div className=\\"so-alert so-alert-info so-alert-with-close so-alert-with-icon so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-icon\\" style={{...}}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M512 981.333333C252.8 981.333333 42.666667 771.2 42.666667 512S252.8 42.666667 512 42.666667s469.333333 210.133333 469.333333 469.333333-210.133333 469.333333-469.333333 469.333333z m0-597.333333a85.333333 85.333333 0 1 0 0-170.666667 85.333333 85.333333 0 0 0 0 170.666667z m0 42.666667a64 64 0 0 0-64 64v256a64 64 0 0 0 128 0v-256A64 64 0 0 0 512 426.666667z\\" />
          </svg>
        </div>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;

exports[`Message should render alert correct 2`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item so-message-item-show-top undefined\\" style={{...}}>
    <ShineoutAlert outAnimation={true} className=\\"so-message-msg\\" dismiss={[undefined]} hideClose={[undefined]} onClose={[Function: bound closeMessageForAnimation]} icon={true} iconSize={14} style={{...}} type=\\"success\\" size=\\"default\\" duration={200}>
      <div className=\\"so-alert so-alert-success so-alert-with-close so-alert-with-icon so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-icon\\" style={{...}}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M512 981.333333C252.8 981.333333 42.666667 771.2 42.666667 512S252.8 42.666667 512 42.666667s469.333333 210.133333 469.333333 469.333333-210.133333 469.333333-469.333333 469.333333z m-82.986667-276.48a42.453333 42.453333 0 0 0 22.613334-11.818666l301.738666-301.696a42.666667 42.666667 0 0 0-60.330666-60.373334l-272.469334 272.469334-91.136-91.136a42.666667 42.666667 0 0 0-60.330666 60.330666l120.704 120.704a42.666667 42.666667 0 0 0 39.210666 11.52z\\" />
          </svg>
        </div>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;

exports[`Message should render alert correct 3`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item so-message-item-show-top undefined\\" style={{...}}>
    <ShineoutAlert outAnimation={true} className=\\"so-message-msg\\" dismiss={[undefined]} hideClose={[undefined]} onClose={[Function: bound closeMessageForAnimation]} icon={true} iconSize={14} style={{...}} type=\\"warn\\" size=\\"default\\" duration={200}>
      <div className=\\"so-alert so-alert-warn so-alert-with-close so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;

exports[`Message should render alert correct 4`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item so-message-item-show-top undefined\\" style={{...}}>
    <ShineoutAlert outAnimation={true} className=\\"so-message-msg\\" dismiss={[undefined]} hideClose={[undefined]} onClose={[Function: bound closeMessageForAnimation]} icon={true} iconSize={14} style={{...}} type=\\"error\\" size=\\"default\\" duration={200}>
      <div className=\\"so-alert so-alert-error so-alert-with-close so-alert-with-icon so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-icon\\" style={{...}}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M512 981.333333C252.757333 981.333333 42.666667 771.242667 42.666667 512S252.757333 42.666667 512 42.666667s469.333333 210.090667 469.333333 469.333333-210.090667 469.333333-469.333333 469.333333z m0-529.664L361.130667 300.8A42.666667 42.666667 0 0 0 300.8 361.130667L451.669333 512 300.8 662.869333a42.666667 42.666667 0 0 0 60.330667 60.330667L512 572.330667l150.869333 150.869333a42.666667 42.666667 0 0 0 60.330667-60.330667L572.330667 512l150.869333-150.869333a42.666667 42.666667 0 1 0-60.330667-60.330667L512 451.669333z\\" />
          </svg>
        </div>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;
